--- a/apiReturnIMC/index.html
+++ b/apiReturnIMC/index.html
@@ -36,7 +36,7 @@
                             
           <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link">Submit</button>
+              <button class="button is-link">Converter</button>
             </div>
             <div class="control">
               <button class="button is-link is-light">Cancel</button>
